style.css
body {
  font-family: "Playfair Display";
  max-width: 100%;
}

a:focus,
button:focus {
  outline-width: 2px;
}

h1,
h2,
h4 {
  font-family: "Montserrat", sans-serif;
  margin: 5px 0;
  letter-spacing: 2px;
}

ul {
  font-family: "Montserrat", sans-serif;
  padding: 0;
  list-style-type: none;
}

ul {
  margin: 0 0 5px 0;
}

.grid-container {
  display: grid;
  justify-content: space-evenly;
  justify-items: center;
  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
  padding: 10px;
  gap: 25px;
}

.flex {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: flex-end;
  align-content: flex-start;
}

/* Search button*/
.wrapper {
  position: relative;
  display: flex;
  justify-content: center;
  min-width: 100px;
  height: 65px;
}

.search {
  margin: 0 5px;
  border: 1px solid grey;
  border-radius: 5px;
  width: 50%;
  padding: 2px 20px 2px 50px;
  background-color: #f5f5f5;
}

.search-icon {
  width: 40px;
  position: relative;
  top: 18px;
  left: 50px;
  padding: 7px;
}

.clear-icon {
  position: absolute;
  top: 9px;
  right: 8px;
  width: 12px;
  cursor: pointer;
  visibility: hidden;
}

.search:hover,
.search:focus {
  border: 1px solid #009688;
  background-color: white;
}
/* -- Search button -- */

.button-8 {
  background-color: #e1ecf4;
  border-radius: 3px;
  border: 1px solid #009688;
  box-shadow: rgba(255, 255, 255, 0.7) 0 1px 0 0 inset;
  box-sizing: border-box;
  color: #399d86;
  cursor: pointer;
  display: inline-block;
  font-family: -apple-system, system-ui, "Segoe UI", "Liberation Sans",
    sans-serif;
  font-size: 1.15rem;
  font-weight: 400;
  line-height: 1.15385;
  margin: 0;
  padding: 8px 0.8em;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  vertical-align: baseline;
  white-space: nowrap;
}

.button-8:hover,
.button-8:focus {
  background-color: #b3d3ea;
  color: #2c5777;
}

.button-8:focus {
  box-shadow: 0 0 0 4px rgba(0, 149, 255, 0.15);
}

.button-8:active {
  background-color: #a0c7e4;
  box-shadow: none;
  color: #2c5777;
}

.recipes {
  padding-left: auto;
  padding-right: auto;
}

.card {
  width: 320px;
  margin: 5px;
  border: 2px solid #e9e9e9;
  padding: 5px;
}

.card__image {
  max-width: 100%;
  height: auto;
}

h4 {
  text-align: center;
  line-height: 20px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: normal;
}

.card__ingredients {
  font-family: "Montserrat", sans-serif;
  overflow: hidden;
  max-height: 240px;
  text-overflow: ellipsis;
}

.card__name {
  min-width: 110%;
  height: 70px;
  padding: 12px;
  color: white;
  font-size: 1em;
  background-color: #8d9d80;
}
.card__content {
  display: flex;
  height: 280px;
  flex-wrap: wrap;
  justify-content: center;
  align-content: space-between;
}

.card__buttons {
  display: flex;
  justify-content: space-around;
  padding: 5px;
  width: 100%;
}

.card__see-more {
  position: absolute;
}

.card__save {
  margin-left: 10rem;
}

.card__save:hover {
  cursor: pointer;
}

/* W3.CSS 4.15 December 2020 by Jan Egil and Borge Refsnes */
html {
  box-sizing: border-box;
  scroll-behavior: smooth;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}

/* Extract from normalize.css by Nicolas Gallagher and Jonathan Neal git.io/normalize */
html {
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}
body {
  margin: 0;
}

footer,
header,
main,
section {
  display: block;
}

template {
  display: none;
}

a {
  background-color: transparent;
}

strong {
  font-weight: bolder;
}

small {
  font-size: 80%;
}
hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

button,
input {
  font: inherit;
  margin: 0;
}

button {
  background-color: transparent;
  border: none;
}

button,
input {
  overflow: visible;
}
button {
  text-transform: none;
}

button,
[type="button"] {
  -webkit-appearance: button;
}

button::-moz-focus-inner,
[type="button"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

button:-moz-focusring,
[type="button"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

[type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

/* End extract */
html,
body {
  font-family: Verdana, sans-serif;
  font-size: 15px;
  line-height: 1.5;
}
html {
  overflow-x: hidden;
}

h1 {
  font-size: 36px;
}
h2 {
  font-size: 30px;
}
h4 {
  font-size: 20px;
}

.lz-wide {
  letter-spacing: 4px;
}

hr {
  border: 0;
  border-top: 1px solid #eee;
  margin: 20px 0;
}

.lz-image {
  overflow: hidden;
  max-width: 100vw;
  height: auto;
}
img {
  vertical-align: middle;
  border-style: none;
  min-height: 30%;
  width: auto;
}

a {
  color: inherit;
}

.lz-button {
  border: none;
  display: inline-block;
  padding: 8px 16px;
  vertical-align: middle;
  overflow: hidden;
  text-decoration: none;
  color: inherit;
  background-color: inherit;
  text-align: center;
  cursor: pointer;
  white-space: nowrap;
}

.lz-button {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.lz-button:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

:disabled * {
  pointer-events: none;
}

.lz-display-container {
  position: relative;
}

#main {
  transition: margin-left 0.4s;
}

.lz-bar {
  width: 100%;
  overflow: hidden;
}
.lz-center .lz-bar {
  display: inline-block;
  width: auto;
}

.lz-bar .lz-bar-item {
  padding: 8px 16px;
  float: left;
  width: auto;
  border: none;
  display: block;
}

.lz-bar .lz-button {
  white-space: normal;
}

.lz-container:after,
.lz-container:before,
.lz-row-padding:after,
.lz-row-padding:before,
.lz-bar:before,
.lz-bar:after {
  content: "";
  display: table;
  clear: both;
}

.lz-content {
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 1205px) {
}

@media (max-width: 600px) {
  .lz-hide-small {
    display: none !important;
  }
}

@media (max-width: 768px) {
  .lz-image {
    display: none;
  }
}

@media (max-width: 992px) {
  .search {
    width: 100%;
  }
}

.lz-top {
  position: fixed;
  width: 100%;
  z-index: 1;
}
.lz-top {
  top: 0;
}

.lz-display-bottomleft {
  position: absolute;
  left: 0;
  bottom: 0;
}

.lz-row-padding {
  padding: 0 8px;
}

.lz-container {
  padding: 0.01em 16px;
}

.lz-card {
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
}
@keyframes lz-spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(359deg);
  }
}
@keyframes fading {
  0% {
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
@keyframes opac {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@keyframes animatetop {
  from {
    top: -300px;
    opacity: 0;
  }
  to {
    top: 0;
    opacity: 1;
  }
}
@keyframes animateleft {
  from {
    left: -300px;
    opacity: 0;
  }
  to {
    left: 0;
    opacity: 1;
  }
}
@keyframes animateright {
  from {
    right: -300px;
    opacity: 0;
  }
  to {
    right: 0;
    opacity: 1;
  }
}
@keyframes animatebottom {
  from {
    bottom: -300px;
    opacity: 0;
  }
  to {
    bottom: 0;
    opacity: 1;
  }
}
@keyframes animatezoom {
  from {
    transform: scale(0);
  }
  to {
    transform: scale(1);
  }
}

.lz-opacity {
  opacity: 0.6;
}
.lz-large {
  font-size: 18px !important;
}
.lz-center {
  text-align: center !important;
}
.lz-padding {
  padding: 8px 16px !important;
}
.lz-padding-large {
  padding: 12px 24px !important;
}

.lz-padding-16 {
  padding-top: 16px !important;
  padding-bottom: 16px !important;
}

.lz-padding-32 {
  padding-top: 32px !important;
  padding-bottom: 32px !important;
}

.lz-padding-64 {
  padding-top: 64px !important;
  padding-bottom: 64px !important;
}
.lz-right {
  float: right !important;
}

.lz-button:hover {
  color: #000 !important;
  background-color: #ccc !important;
}

/* Colors */

.lz-white {
  color: #000 !important;
  background-color: #fff !important;
}

.lz-light-grey {
  color: #000 !important;
  background-color: #d8e0e2;
}

.sign-in {
  margin-left: auto;
}

.sidebar {
  position: fixed;
  top: 0;
  right: -100rem; /* Hide from screen */
  display: flex;
  flex-direction: column;
  height: 100vh;
  padding: 2rem;
  background-color: white;
  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
  transition: all 0.3s ease-in-out;
  overflow: scroll;
  z-index: 3;
}

.sidebar--active {
  right: 0;
}

.sidebar__card {
  display: flex;
  align-items: center;
  margin-top: 1rem;
  padding: 1rem;
}

.sidebar__card:hover {
  cursor: pointer;
  background-color: rgba(0, 0, 0, 0.05);
}
.sidebar__card:hover > .sidebar__delete,
.sidebar__card:focus > .sidebar__delete,
.sidebar__delete:focus {
  opacity: 1;
  cursor: pointer;
}

.sidebar__image {
  height: 50px;
}

.sidebar__name {
  margin: 0 1rem;
  user-select: none;
  font-size: 1rem;
  font-weight: 500;
  letter-spacing: 0;
}

.sidebar__delete {
  background-color: transparent;
  border: none;
  margin-left: auto;
  transition: opacity 0.2s linear;
  opacity: 0;
}

.sidebar__delete:hover {
  transform: scale(1.1);
}

.sidebar__default-content--hidden {
  display: none;
}

.sidebar__header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: relative;
}

.sidebar__title {
  margin: 0;
  text-align: center;
  color: #4f4f4f;
  font-size: 1.5rem;
}

.sidebar__close {
  transition: all 0.2s linear;
  margin-left: 1rem;
}

.sidebar__close:hover {
  transform: scale(1.2) rotate(90deg);
  cursor: pointer;
}

.sidebar__form {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  margin-top: 1rem;
}

.sidebar__errors {
  color: red;
  font-size: 0.8rem;
  font-style: italic;
}

.sidebar__label {
  margin-top: 1rem;
}

.sidebar__input {
  height: 2rem;
  padding-left: 1rem;
  margin-top: 0.5rem;
  border: 1px solid rgba(0, 0, 0, 0.4);
  outline-color: #0066ff;
}

.sidebar__buttons-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 1rem;
}

.sidebar__sign-in {
  display: block;
  width: fit-content;
  padding: 0.5rem 1.3rem;
  font-size: 1rem;
  text-transform: capitalize;
  background-color: #111111;
  color: white;
  border: none;
  border-radius: 5px;
  outline-color: rgba(24, 115, 180, 0.979);
  opacity: 0.9;
}

.sidebar__sign-in:hover {
  cursor: pointer;
  opacity: 1;
}

.sidebar__register {
  background-color: transparent;
  border: none;
  text-decoration: underline;
  transition: all 0.1s linear;
}

.sidebar__register:hover {
  cursor: pointer;
}

.notifications {
  position: fixed;
  top: 0;
  right: 1rem;
  display: flex;
  flex-direction: column;
  min-width: 10rem;
  align-items: center;
  z-index: 4;
}

.notification {
  width: fit-content;
  padding: 1rem;
  margin-top: 2rem;
  border-radius: 2px;
  color: white;
  background-color: rgb(53, 52, 52);
}

